--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,8 @@
 
 </div>
-<div class="footer-padding"></div>
-  <div class="footer">
+  <div class="footer navbar-fixed-bottom">
     <p>Made with ❤️ by Kayla Yin</p>
   </div>
-</div>
+
 </body>
 </html>
