--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,7 +20,7 @@
 }
 
 .footer {
-	position: absolute;
+	position: relative;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
@@ -32,6 +32,8 @@
 	margin-top: 25px;
 	font-size: 12px;
   color: #fff;
+  text-align: center;
+  padding: 20px;
 }
 
 /* customize css */
