--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,10 +1,10 @@
 
 <%- include("partials/header") -%>
 
-    <h1> <%= post.postTitle %> </h1>
+    <h1> <%= post.title %> </h1>
 
-    <p class="truncateText">
-        <%= post.postBody %>
+    <p>
+        <%= post.content%>
     </p>
 
 <%- include("partials/footer") -%>
